--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
           </ul>
         </div>
 
-        <ul class="main-site-list lst-reset fl-container">
+        <ul class="main-site-list inner-main-site-list lst-reset fl-container">
           <li class="main-site-item">
             <a class="main-submenu-toggle">Каталог товаров</a>
             <div class="main-submenu-container">
@@ -198,7 +198,7 @@
     <footer class="main-footer">
       <div class="wrapper footer-container">
         <nav class="fl-container">
-          <a class="footer-logo logo">
+          <a class="footer-logo logo inner-logo" href="index.html">
             <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
           </a>
           <ul class="footer-user-nav lst-reset">
