--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
         <ul class="main-site-list lst-reset fl-container">
           <li class="main-site-item">
             <a class="main-submenu-toggle">Каталог товаров</a>
-            <div class="main-submenu-container">
-              <ul class="main-submenu fl-container lst-reset">
-                <li class="main-submenu-item"><a href="#">Виртуальная реальность</a></li>
-                <li class="main-submenu-item"><a href="#">Фитнес-браслеты</a></li>
-                <li class="main-submenu-item"><a href="#">Квадрокоптеры</a></li>
-                <li class="main-submenu-item"><a href="catalog.html">Моноподы для селфи</a></li>
-                <li class="main-submenu-item"><a href="#">Умные часы</a></li>
-                <li class="main-submenu-item"><a href="#">Экшн-камеры</a></li>
-              </ul>
-            </div>
+            <ul class="main-submenu fl-container lst-reset">
+              <li class="main-submenu-item"><a href="#">Виртуальная реальность</a></li>
+              <li class="main-submenu-item"><a href="#">Фитнес-браслеты</a></li>
+              <li class="main-submenu-item"><a href="#">Квадрокоптеры</a></li>
+              <li class="main-submenu-item"><a href="catalog.html">Моноподы для селфи</a></li>
+              <li class="main-submenu-item"><a href="#">Умные часы</a></li>
+              <li class="main-submenu-item"><a href="#">Экшн-камеры</a></li>
+          </ul>
           </li>
           <li class="main-site-item"><a href="#">Доставка</a></li>
           <li class="main-site-item"><a href="#">Гарантия</a></li>
@@ -48,80 +46,82 @@
     <!-- Здесь будет main -->
 
     <main class="wrapper index-main">
-      <div class="slider fl-container">
-        <input type="radio" class="slider-control-1" name="slider-control" id="slider-control-1"  hidden checked>
-        <input type="radio" class="slider-control-2" name="slider-control" id="slider-control-2" hidden>
-        <input type="radio" class="slider-control-3" name="slider-control" id="slider-control-3" hidden>
-        <div class="slider-controls">
-          <label for="slider-control-1"></label>
-          <label for="slider-control-2"></label>
-          <label for="slider-control-3"></label>
-        </div>
-        <div class="slider-container fl-container">
-          <div class="slider-item fl-container">
-            <div class="slider-img">
-              <img src="img/slider-1.png" alt="Slider-1" class="slider-img" width="348px" height="486px">
-            </div>
-            <div class="fl-container fld-column slider-content">
-              <h2>Делай селфи, как Бен Стиллер!</h2>
-              <p>
-                Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-              </p>
-              <a href="#" class="btn slider-link">Подробнее</a>
-              <table class="slider-table">
-                <tr>
-                  <td>8,5 м</td>
-                  <td>5 кг</td>
-                  <td>Карбон</td>
-                </tr>
-                <tr class="slider-table-header">
-                  <td>Длина палки</td>
-                  <td>Вес палки</td>
-                  <td>Материал</td>
-                </tr>
-              </table>
-            </div>
+      <div class="wrapper">
+        <div class="slider">
+          <input type="radio" class="slider-control-1" name="slider-control" id="slider-control-1"  hidden checked>
+          <input type="radio" class="slider-control-2" name="slider-control" id="slider-control-2" hidden>
+          <input type="radio" class="slider-control-3" name="slider-control" id="slider-control-3" hidden>
+          <div class="slider-controls">
+            <label for="slider-control-1"></label>
+            <label for="slider-control-2"></label>
+            <label for="slider-control-3"></label>
           </div>
-          <div class="slider-item fl-container">
-            <div class="slider-img">
-              <img src="img/slider-2.png" alt="Slider-2" class="slider-img" width="345px" height="485px">
+          <div class="slider-container fl-container">
+            <div class="slider-item fl-container">
+              <div class="slider-img">
+                <img src="img/slider-1.png" alt="Slider-1" class="slider-img" width="384px" height="486px">
+              </div>
+              <div class="slider-content">
+                <h2>Делай селфи, как Бен Стиллер!</h2>
+                <p>
+                  Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+                </p>
+                <a href="#" class="btn slider-link">Подробнее</a>
+                <table class="slider-table">
+                  <tr>
+                    <td>8,5 м</td>
+                    <td>5 кг</td>
+                    <td>Карбон</td>
+                  </tr>
+                  <tr class="slider-table-header">
+                    <td>Длина палки</td>
+                    <td>Вес палки</td>
+                    <td>Материал</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-            <div class="fl-container fld-column slider-content">
-              <h2>Худеем правильно!</h2>
-              <p>
-                Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
-              </p>
-              <a href="#" class="btn slider-link">Подробнее</a>
-              <table class="slider-table">
-                <tr>
-                  <td>48 часов</td>
-                </tr>
-                <tr class="slider-table-header">
-                  <td>Без подзарядки</td>
-                </tr>
-              </table>
+            <div class="slider-item fl-container">
+              <div class="slider-img">
+                <img src="img/slider-2.png" alt="Slider-2" class="slider-img" width="345px" height="485px">
+              </div>
+              <div class="slider-content">
+                <h2>Худеем правильно!</h2>
+                <p>
+                  Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+                </p>
+                <a href="#" class="btn slider-link">Подробнее</a>
+                <table class="slider-table">
+                  <tr>
+                    <td>48 часов</td>
+                  </tr>
+                  <tr class="slider-table-header">
+                    <td>Без подзарядки</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <div class="slider-item fl-container">
-            <div class="slider-img">
-              <img src="img/slider-3.png" alt="Slider-3" class="slider-img" width="526px" height="334px">
-            </div>
-            <div class="fl-container fld-column slider-content">
-              <h2>Порхает как бабочка, жалит как пчела!</h2>
-              <p>
-                Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
-              </p>
-              <a href="#" class="btn slider-link">Подробнее</a>
-              <table class="slider-table">
-                <tr>
-                  <td>800 м</td>
-                  <td>50 м</td>
-                </tr>
-                <tr class="slider-table-header">
-                  <td>Дальность полёта</td>
-                  <td>Радиус поражения</td>
-                </tr>
-              </table>
+            <div class="slider-item fl-container">
+              <div class="slider-img">
+                <img src="img/slider-3.png" alt="Slider-3" class="slider-img" width="526px" height="334px">
+              </div>
+              <div class="slider-content">
+                <h2>Порхает как бабочка, жалит как пчела!</h2>
+                <p>
+                  Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+                </p>
+                <a href="#" class="btn slider-link">Подробнее</a>
+                <table class="slider-table">
+                  <tr>
+                    <td>800 м</td>
+                    <td>50 м</td>
+                  </tr>
+                  <tr class="slider-table-header">
+                    <td>Дальность полёта</td>
+                    <td>Радиус поражения</td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
         </div>
@@ -154,41 +154,43 @@
       </ul>
     </main>
 
-    <section class="wrapper fl-container">
-      <input name="benefits-control" class="benefits-control-1" type="radio" id="benefits-1" hidden checked>
-      <input name="benefits-control" class="benefits-control-2" type="radio" id="benefits-2" hidden>
-      <input name="benefits-control" class="benefits-control-3" type="radio" id="benefits-3" hidden>
-      <ul class="benefits lst-reset fl-container fld-column">
-        <li class="benefits-names">
-          <label class="btn" for="benefits-1">
-            Доставка
-          </label>
-        </li>
-        <li class="benefits-names">
-          <label class="btn" for="benefits-2">
-            Гарантия
-          </label>
-        </li>
-        <li class="benefits-names">
-          <label class="btn" for="benefits-3">
-            Кредит
-          </label>
-        </li>
-      </ul>
-      <ul class="benefits-list lst-reset">
-        <li class="benefits-item benefits-item-1">
-          <h3>Доставка</h3>
-          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        </li>
-        <li class="benefits-item benefits-item-2">
-          <h3>Гарантия</h3>
-          <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-        </li>
-        <li class="benefits-item benefits-item-3">
-          <h3>Кредит</h3>
-          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-        </li>
-      </ul>
+    <section class="benefits">
+      <div class="wrapper fl-container">
+        <input name="benefits-control" class="benefits-control-1" type="radio" id="benefits-1" hidden checked>
+        <input name="benefits-control" class="benefits-control-2" type="radio" id="benefits-2" hidden>
+        <input name="benefits-control" class="benefits-control-3" type="radio" id="benefits-3" hidden>
+        <ul class="benefits-titles lst-reset fl-container fld-column">
+          <li class="benefits-title benefits-title-1">
+            <label class="btn benefits-label-1" for="benefits-1">
+              Доставка
+            </label>
+          </li>
+          <li class="benefits-title benefits-title-2">
+            <label class="btn benefits-label-2" for="benefits-2">
+              Гарантия
+            </label>
+          </li>
+          <li class="benefits-title benefits-title-3">
+            <label class="btn benefits-label-3" for="benefits-3">
+              Кредит
+            </label>
+          </li>
+        </ul>
+        <ul class="benefits-list lst-reset">
+          <li class="benefits-item benefits-item-1">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          </li>
+          <li class="benefits-item benefits-item-2">
+            <h3>Гарантия</h3>
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+          </li>
+          <li class="benefits-item benefits-item-3">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <ul class="fl-container partners wrapper lst-reset">
@@ -215,26 +217,26 @@
     </ul>
 
     <div class="fl-container wrapper">
-      <section class="info fl-container fld-column">
+      <section class="info">
         <h3>О нас</h3>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдалённые точки России! DEVICE работает со многими транспортными компаниями:</p>
         <ul class="info-list">
-          <li class="info-item"><a href="#">Деловые линии</a></li>
+          <li class="info-item"><a href="#">Деловые Линии</a></li>
           <li class="info-item"><a href="#">Автотрейдинг</a></li>
           <li class="info-item"><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
-        <a href="#" class="btn">Подробнее о нас</a>
+        <a href="#" class="info-btn btn">Подробнее о нас</a>
       </section>
 
-      <section class="contacts fl-container fld-column">
+      <section class="contacts">
         <h3>Контакты</h3>
-        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <a href="img/map-big.jpg" class="contacts-map">
           <img src="img/map.jpg" alt="Карта (уменьшенная)" width="560" height="220" class="map-preview">
           <!-- <span class="visually-hidden">Увеличить карту</span> -->
         </a>
-        <a href="#" title="Напишите нам" class="btn">Напишите нам</a>
+        <a href="#" title="Напишите нам" class="btn contacts-btn">Напишите нам</a>
       </section>
     </div>
 
