--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </li>
           <li class="benefits-item benefits-item-2">
             <h3>Гарантия</h3>
-            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. <span>Товар, не дом, конечно же.</span></p>
           </li>
           <li class="benefits-item benefits-item-3">
             <h3>Кредит</h3>
@@ -259,7 +259,7 @@
             <li class="footer-nav-item"><a href="#">Гарантия</a></li>
             <li class="footer-nav-item"><a href="#">Контакты</a></li>
           </ul>
-          <a href="tel:+74954959595" class="footer-nav-phone">Тел: +7(495)495-95-95</a>
+          <a href="tel:+74954959595" class="footer-nav-phone">Тел.: +7 (495) 495-95-95</a>
         </div>
         <div class="footer-social fl-container">
           <ul class="footer-social-list lst-reset">
