--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       </div>
     </footer>
 
-    <section class="map-popup">
+    <section class="map-popup" hidden>
       <h3 class="visually-hidden">Увеличенная карта</h3>
       <p>
         <img src="img/map-big.jpg" alt="Карта (увеличенная)" height="559" width="960">
@@ -296,7 +296,7 @@
       </button>
     </section>
 
-    <section class="form-modal">
+    <section class="form-modal" hidden>
       <h3 class="visually-hidden">Форма обратной связи:</h3>
       <form action="https://echo.htmlacademy.ru" class="writeus-modal" method="post">
         <ul class="lst-reset fl-container form-modal-list flw-wrap">
