--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
           <ul class="main-user-nav lst-reset fl-container">
             <li class="main-user-item">
               <a href="#">Валентин Петухов</a>
-              <a href="#">Выйти</a>
+              <a href="#" class="main-user-out">Выйти</a>
             </li>
             <li class="main-user-item"><a href="#">Сравнить</a></li>
             <li class="main-user-item"><a href="#">Корзина</a></li>
@@ -106,7 +106,7 @@
           <div class="sort fl-container">
             <h3>Сортировка:</h3>
             <ul class="sort-list lst-reset">
-              <li class="sort-list-item">
+              <li class="sort-list-item sort-list-active">
                 <button type="button" class="btn-reset sort-list-btn">По цене</button>
               </li>
               <li class="sort-list-item">
@@ -118,7 +118,7 @@
             </ul>
             <p class="sort-control">
               <a href="#" class="sort-arrow sort-arrow-up">по возрастанию</a>
-              <a href="#" class="sort-arrow sort-arrow-down">по убыванию</a>
+              <a href="#" class="sort-arrow sort-arrow-down sort-arrow-active">по убыванию</a>
             </p>
           </div>
           <ul class="item-list fl-container flw-wrap">
@@ -192,17 +192,17 @@
             </li>
           </ul>
           <ul class="pagination-list fl-container lst-reset">
-            <li class="pagination-item">
+            <li class="pagination-item pagination-control">
               <a href="#">назад</a>
             </li>
             <li class="pagination-item">
               <ul class="pagination-numbers fl-container lst-reset">
-                <li><a href="#">1</a></li>
+                <li><a href="#" class="pagination-current">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
               </ul>
             </li>
-            <li class="pagination-item">
+            <li class="pagination-item pagination-control">
               <a href="#">вперед</a>
             </li>
           </ul>
@@ -219,7 +219,7 @@
           <ul class="footer-user-nav lst-reset">
             <li class="footer-user-item">
               <a href="#">Валентин Петухов</a>
-              <a href="#">Выйти</a>
+              <a href="#" class="main-user-out">Выйти</a>
             </li>
             <li class="footer-user-item"><a href="#">Сравнить</a></li>
             <li class="footer-user-item"><a href="#">Корзина</a></li>
@@ -252,7 +252,7 @@
               </a>
             </li>
           </ul>
-          <a href="https://htmlacademy.ru" class="footer-social-copyright">
+          <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-social-copyright">
             <span class="visually-hidden">HTML Academy</span>
           </a>
         </div>
