--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Девайс</title>
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"> -->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="main-header">
@@ -43,7 +43,6 @@
         </ul>
       </nav>
     </header>
-    <!-- Здесь будет main -->
 
     <main class="wrapper index-main">
       <div class="wrapper">
@@ -59,7 +58,7 @@
           <div class="slider-container fl-container">
             <div class="slider-item fl-container">
               <div class="slider-img">
-                <img src="img/slider-1.png" alt="Slider-1" class="slider-img" width="384px" height="486px">
+                <img src="img/slider-1.png" alt="Slider-1" class="slider-img" width="384" height="486">
               </div>
               <div class="slider-content">
                 <h2>Делай селфи, как Бен Стиллер!</h2>
@@ -83,7 +82,7 @@
             </div>
             <div class="slider-item fl-container">
               <div class="slider-img">
-                <img src="img/slider-2.png" alt="Slider-2" class="slider-img" width="345px" height="485px">
+                <img src="img/slider-2.png" alt="Slider-2" class="slider-img" width="345" height="485">
               </div>
               <div class="slider-content">
                 <h2>Худеем правильно!</h2>
@@ -103,7 +102,7 @@
             </div>
             <div class="slider-item fl-container">
               <div class="slider-img">
-                <img src="img/slider-3.png" alt="Slider-3" class="slider-img" width="526px" height="334px">
+                <img src="img/slider-3.png" alt="Slider-3" class="slider-img" width="526" height="334">
               </div>
               <div class="slider-content">
                 <h2>Порхает как бабочка, жалит как пчела!</h2>
@@ -126,30 +125,31 @@
           </div>
         </div>
       </div>
+
       <ul class="features-list fl-container lst-reset">
         <li class="features-item">
-          <a href="#"></a>
-          <a href="#">Виртуальная реальность</a>
+          <a href="#" class="features-img"></a>
+          <a href="#" class="features-text">Виртуальная реальность</a>
         </li>
         <li class="features-item">
-          <a href="catalog.html"></a>
-          <a href="catalog.html">Моноподы для селфи</a>
+          <a href="catalog.html" class="features-img"></a>
+          <a href="catalog.html" class="features-text">Моноподы <span>для селфи</span></a>
         </li>
         <li class="features-item">
-          <a href="#"></a>
-          <a href="#">Экшн-камеры</a>
+          <a href="#" class="features-img"></a>
+          <a href="#" class="features-text">Экшн-камеры</a>
         </li>
         <li class="features-item">
-          <a href="#"></a>
-          <a href="#">Фитнес-браслеты</a>
+          <a href="#" class="features-img"></a>
+          <a href="#" class="features-text">Фитнес-браслеты</a>
         </li>
         <li class="features-item">
-          <a href="#"></a>
-          <a href="#">Умные часы</a>
+          <a href="#" class="features-img"></a>
+          <a href="#" class="features-text">Умные часы</a>
         </li>
         <li class="features-item">
-          <a href="#"></a>
-          <a href="#">Квадрокоптеры</a>
+          <a href="#" class="features-img"></a>
+          <a href="#" class="features-text">Квадрокоптеры</a>
         </li>
       </ul>
     </main>
@@ -196,22 +196,22 @@
     <ul class="fl-container partners wrapper lst-reset">
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <img src="img/logo-1-jpg.jpg" alt="partner-1" width="260px" height="100px">
+          <img src="img/logo-1-jpg.jpg" alt="partner-1" width="260" height="100">
         </a>
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <img src="img/logo-2-jpg.jpg" alt="partner-2" width="260px" height="100px">
+          <img src="img/logo-2-jpg.jpg" alt="partner-2" width="260" height="100">
         </a>
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <img src="img/logo-3-jpg.jpg" alt="partner-3" width="260px" height="100px">
+          <img src="img/logo-3-jpg.jpg" alt="partner-3" width="260" height="100">
         </a>
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <img src="img/logo-4-jpg.jpg" alt="partner-4" width="260px" height="100px">
+          <img src="img/logo-4-jpg.jpg" alt="partner-4" width="260" height="100">
         </a>
       </li>
     </ul>
@@ -279,7 +279,7 @@
               </a>
             </li>
           </ul>
-          <a href="https://htmlacademy.ru" class="footer-social-copyright">
+          <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-social-copyright">
             <span class="visually-hidden">HTML Academy</span>
           </a>
         </div>
