--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML Academy: Девайс/Каталог</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">-->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -64,6 +64,8 @@
             </legend>
             <label for="price-value" class="price-value">
               <input type="range" id="price-value" min="0" max="5000" name="price">
+              <span class="price-min">от 0</span>
+              <span class="price-max">до 5000</span>
             </label>
           </fieldset>
           <fieldset class="color fl-container fld-column">
