--- a/index.html
+++ b/index.html
@@ -366,11 +366,15 @@
       close.addEventListener("click", function (evt) {
         evt.preventDefault();
         popup.classList.remove("form-modal-show");
+        popup.classList.remove("form-modal-error");
       });
 
       form.addEventListener("submit", function (evt) {
         if (!login.value || !email.value) {
           evt.preventDefault();
+          popup.classList.remove("form-modal-error");
+          popup.offsetWidth = popup.offsetWidth;
+          popup.classList.add("form-modal-error");
           console.log('Нужно ввести имя и email');
         } else {
           if (isStorageSupport) {
@@ -385,6 +389,7 @@
           evt.preventDefault();
           if (popup.classList.contains("form-modal-show")) {
             popup.classList.remove("form-modal-show");
+            popup.classList.remove("form-modal-error");
           }
         }
       });
@@ -404,6 +409,16 @@
         evt.preventDefault();
         mapPopup.classList.remove("map-popup-show");
       });
+
+      window.addEventListener("keydown", function (evt) {
+        if (evt.keyCode === 27) {
+          evt.preventDefault();
+          if (mapPopup.classList.contains("map-popup-show")) {
+            mapPopup.classList.remove("map-popup-show");
+          }
+        }
+      });
+
     </script>
 
         <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
